# ChatServer_main

./: CMakeLists.txt  README.md  autobuild.sh
include/server/: chatservice.hpp
include/server/db/: CommonConnectionPool.h  db_chat.h
include/server/model/: friendmodel.hpp  group.hpp  offlinemessagemodel.hpp
include/server/mymprpc/: lockqueue.h  logger.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcheader.pb.h  zookeeperutil.h
include/server/redis/: redis.hpp
mprpc/: CMakeLists.txt  README.md  autobuild.sh
mprpc/example/: CMakeLists.txt  friend.pb.cc  friend.pb.h  friend.proto  friendmodel.proto  groupmodel.pb.cc  groupmodel.pb.h  groupmodel.proto  offlinemessagemodel.pb.h  offlinemessagemodel.proto  user.pb.cc  user.pb.h  user.proto  usermodel.pb.cc  usermodel.pb.h  usermodel.proto
mprpc/example/callee/: CMakeLists.txt  friendservice.cc  userservice.cc
mprpc/example/calleefriendmodel/: CMakeLists.txt  CommonConnectionPool.cpp  Connection.cpp  friendmodel.cpp  friendmodel.hpp  testfriend.cpp  testfriendmodel.cpp  user.hpp
mprpc/example/calleegroupmodel/: CMakeLists.txt  Connection.h  groupmodel.cpp  groupmodel_z.hpp  groupuser.hpp  testgroupmodel.cpp
mprpc/example/calleeofflinemessagemodel/: CMakeLists.txt  CommonConnectionPool.h  testofflinemessagemodel.cpp
mprpc/example/calleeusermodel/: CMakeLists.txt  testusermodel.cpp  user.hpp  usermodel.cpp  usermodel.hpp
mprpc/example/caller/: CMakeLists.txt  callfriendservice.cc  calluserservice.cc
mprpc/example/callerchat/: CMakeLists.txt  callgroupmodel.cpp  callofflinemessagemodel.cpp  calltestfriendmodel.cpp  callusermodel.cpp
mprpc/include/: public.hpp
mprpc/include/server/: chatserver.hpp
mprpc/include/server/db/: Connection.h  public.h
mprpc/include/server/model/: groupmodel_z.hpp  usermodel.hpp
mprpc/include/server/rpc_proto_h/: friendmodel.pb.h
mprpc/lib/include/: lockqueue.h  logger.h
mprpc/src/: CMakeLists.txt  logger.cc  mprpcapplication.cc  mprpcchannel.cc  mprpcconfig.cc  mprpccontroller.cc  rpcprovider.cc  zookeeperutil.cc
mprpc/src/include/: logger.h  mprpcapplication.h  rpcprovider.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: CommonConnectionPool.cpp  db_chat.cpp  mysql.ini
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp
src/server/redis/: redis.cpp
src/server/rpc_proto_cc/: friendmodel.pb.cc  offlinemessagemodel.pb.cc
